[package]
name = "tracing-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.63"
axum = "0.5.15"
opentelemetry = "0.17.0"
opentelemetry-jaeger = { version = "0.16.0", features = ["rt-tokio"] }
reqwest = "0.11.11"
tokio = { version = "1.21.0", features = ["full"] }
tracing = { version = "0.1.36", features = ["attributes"] }
tracing-opentelemetry = "0.17.4"
tracing-subscriber = { version = "0.3.15", features = ["env-filter"] }
