[package]
name = "tracing-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.65"
opentelemetry = { version = "0.18.0", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.11.0", features = ["tls-roots"] }
tokio = { version = "1.21.1", features = ["full"] }
tonic = "0.8.1"
tracing = { version = "0.1.36", features = ["attributes"] }
tracing-opentelemetry = "0.18.0"
tracing-subscriber = { version = "0.3.15", features = ["env-filter"] }
